style.css
:root {
  --clr-neutral-100: hsl(0, 0%, 100%);
  --clr-primary-100: hsl(205, 15%, 58%);
  --clr-primary-400: hsl(215, 25%, 27%);
  --clr-primary-800: hsl(217, 33%, 17%);
  --clr-primary-900: hsl(222, 33%, 6%);

  --clr-card: #ffffff24;
  --clr-neon: hsl(317, 100%, 54%);

  --font-alex: 'Alex Brush', cursive;
  --font-poppins: 'Poppins', sans-serif;

  --section-height: 95svh;
  --navigation-height: calc(100svh - var(--section-height));

  background: var(--clr-primary-900);
  scroll-padding-top: 5svh;
  font-family: var(--font-poppins);
}

* {
  text-decoration: none;
}

header {
  height: var(--section-height);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  .title {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    animation: fade-out linear forwards;
    animation-timeline: view(-10svh 75svh);
  }

  h1 {
    font-size: 8rem;
  }

  h2 {
    font-size: 4rem;
  }
}

@media (prefers-reduced-motion: no-preference) {
  @keyframes fade-out {
    from {
      opacity: 1;
      transform: translateY(0svh) scale(1);
    }
    to {
      opacity: 0;
      transform: translateY(30svh) scale(0.8);
    }
  }
}

a:visited {
  color: inherit;
}

nav {
  background: #333;
  color: #fff;
  height: var(--navigation-height);
  position: sticky;
  top: 0;
  width: 100%;
  z-index: 10;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 10rem;
}

nav ul {
  display: flex;
  list-style: none;
}

nav li:not(:last-child) {
  padding-right: 3rem;
}

nav a {
  color: inherit;
}

nav h1 {
  font-family: var(--font-alex);
  font-size: 1.75rem;
}

nav h1:active,
nav ul li:active {
  transform: scale(0.9);
}

#spotlight {
  height: var(--section-height);
  margin: 0 10rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;
}

#spotlight > *:not(:last-child) {
  height: auto;
  animation: fade-in linear forwards;
  animation-timeline: view(80svh 0px);
}

.summary-project {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 2rem;
  margin: 7rem 0 0 0;
}

.summary-project > * {
  width: 50%;
  height: 100%;
}

@media (prefers-reduced-motion: no-preference) {
  @keyframes fade-in {
    from {
      opacity: 0;
      transform: translateY(-30svh) scale(0.8);
    }
    to {
      opacity: 1;
      transform: translateY(0svh) scale(1);
    }
  }
}

.spotlight-summary {
  h1 {
    font-size: 2rem;
    margin: 0 0 1rem 0;
  }
  p {
    font-size: 1.5rem;
  }
}

.spotlight-project div {
  transition: all 0.3s ease;
  height: 100%;
  width: 100%;
}

.project:hover {
  box-shadow: 1rem 1rem 0.5rem var(--clr-primary-400);
  transform: translateY(-5px) scale(1.01);
}

.project img {
  width: 100%;
  border-radius: 1rem;
  margin: 0px 0px 1rem 0px;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: var(--clr-card);
  border-radius: 1rem;
  box-shadow: 0.5rem 0.5rem 0.25rem var(--clr-primary-800);
  padding: 2rem;
}

#slide-tags {
  padding: 0 0 6rem 0;
}

.tags {
  margin: 0 10rem;
  width: 80svw;
  display: flex;
  justify-content: center;
  overflow: hidden;
  white-space: nowrap;
  position: relative;
}

.tags:before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100px;
  height: 100%;
  z-index: 2;
  background: linear-gradient(to left, transparent, var(--clr-primary-900));
}

.tags:after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  width: 100px;
  height: 100%;
  z-index: 2;
  background: linear-gradient(to right, transparent, var(--clr-primary-900));
}

.tags:hover .tag-slider {
  animation-play-state: paused;
}

.tag-slider {
  display: flex;
  gap: 0.75rem;
  list-style: none;
  animation: slideLeft 15s linear infinite;
  padding: 1rem 0 1rem 1rem;
}

.left {
  animation: slideLeft 20s linear infinite;
}

.right {
  animation: slideRight 25s linear infinite;
}

.tag-slider li {
  padding: 1rem;
  background: var(--clr-primary-400);
  border-radius: 0.5rem;
}

@media (prefers-reduced-motion: no-preference) {
  @keyframes slideLeft {
    from {
      transform: translateX(0);
    }
    to {
      transform: translateX(-100%);
    }
  }

  @keyframes slideRight {
    from {
      transform: translateX(0);
    }
    to {
      transform: translateX(100%);
    }
  }
}

#portfolio {
  height: var(--section-height);
  margin: 0 10rem;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 5rem;
}

